--- a/Logica_de_Negocios/Logica_de_Negocios.csproj
+++ b/Logica_de_Negocios/Logica_de_Negocios.csproj
@@ -42,12 +42,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Login\LN_Login.cs" />
+    <Compile Include="Observacion\LN_Observacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proyecto\LN_Proyecto.cs" />
+    <Compile Include="Tarea\LN_Tarea.cs" />
+    <Compile Include="Usuario\LN_Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Acceso_a_Datos\Acceso_a_Datos.csproj">
       <Project>{437f82ab-54be-4d53-9297-95acc8c7a61e}</Project>
       <Name>Acceso_a_Datos</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utilidades\Utilidades.csproj">
+      <Project>{f44018fc-931d-4a27-9ffe-27af934ce5c6}</Project>
+      <Name>Utilidades</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
