--- a/Utilidades/Utilidades.csproj
+++ b/Utilidades/Utilidades.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{437F82AB-54BE-4D53-9297-95ACC8C7A61E}</ProjectGuid>
+    <ProjectGuid>{F44018FC-931D-4A27-9FFE-27AF934CE5C6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Acceso_a_Datos</RootNamespace>
-    <AssemblyName>Acceso_a_Datos</AssemblyName>
+    <RootNamespace>Utilidades</RootNamespace>
+    <AssemblyName>Utilidades</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,9 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Speech" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,22 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConexionDB\clsConeccion.cs" />
-    <Compile Include="Login\AD_Login.cs" />
-    <Compile Include="Observacion\AD_Observacion.cs" />
+    <Compile Include="Cache\UsuarioCache.cs" />
+    <Compile Include="Clase\clsObservacion.cs" />
+    <Compile Include="Clase\clsProyecto.cs" />
+    <Compile Include="Clase\clsTarea.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proyecto\AD_Proyecto.cs" />
-    <Compile Include="Tarea\AD_Tarea.cs" />
-    <Compile Include="Usuario\AD_Usuario.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Utilidades\Utilidades.csproj">
-      <Project>{f44018fc-931d-4a27-9ffe-27af934ce5c6}</Project>
-      <Name>Utilidades</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
